Fixn Some Stuff & Tweakin Valls
- Slowed butterfly anim a bit
- delayed the return, reorganized pond return stuff b/c of wonkiness w/ player position
- shortened ritual by half
- removed Frowning from Reaching
- Decreased Max FOV
- Decreased ground plant decay rate
- Doubled kill y for floating plants
- increased liftime of ground cover
- Decreased spawn radius restricitons
- decreased spawntimes of things in general

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,17 @@ sysinfo.txt
 Assets/Easy Save 2/Disabled\.meta
 
 .vscode/launch.json
+
+Assets/Thomas/Snapshot\.meta
+
+Assets/Thomas/Waterball\.meta
+
+Assets/Plugins/RootMotion/FinalIK/_Integration\.meta
+
+Assets/TestPlants/Meshes/Standard Assets/Effects\.meta
+
+Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing\.meta
+
+Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing/FXAA\.meta
+
+Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing/SMAA\.meta
