--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing\.meta
 Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing/FXAA\.meta
 
 Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing/SMAA\.meta
+
+Screenshots/
