Adding Screenshot overlay Capabilities

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing/FXAA\.meta
 Assets/TestPlants/Meshes/Standard Assets/Effects/AntiAliasing/SMAA\.meta
 
 Screenshots/
+
+PostcardScreenshots/
